--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: ModuleTools
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Toolbox for Analysis Pipeline R Modules
 Version: 0.1.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
+      "Elias", "Schwall",
+      email = "elias.schwall@aimed-analytics.com",
       role = c("aut", "cre")
     )
   )
@@ -14,3 +14,4 @@ Description: More about what it does (maybe more than one line).
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.3
