--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,9 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.3
+Imports: 
+    dplyr (>= 1.1.4),
+    ggdendro (>= 0.2.0),
+    magrittr (>= 2.0.4),
+    tibble (>= 3.3.0),
+    tidyr (>= 1.3.1)
